--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "depcheck": "^1.4.3",
     "ejs": "^3.1.8",
     "eslint": "^8.20.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-unicorn": "^43.0.2",
     "eslint-plugin-wdio": "^7.20.6",
     "husky": "^8.0.1",
