build: change module from NodeNext to ESNext, module resolution from Node16 to Node

--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -11,8 +11,8 @@
     "strictFunctionTypes": false,
     "experimentalDecorators": true,
     "esModuleInterop": true,
-    "moduleResolution": "Node16",
-    "module": "NodeNext",
+    "moduleResolution": "Node",
+    "module": "ESNext",
     "lib": ["dom", "es2021"],
     "types": ["node"]
   },
